# waybright

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
src/: main.rs
waybright-cli/: Cargo.toml
waybright-cli/src/: main.rs
waybright-focus/: Cargo.toml
waybright-focus/src/: hyprland.rs  kwin.rs  lib.rs  niri.rs  sway.rs
waybright-lib/: Cargo.toml
waybright-lib/src/: backlight.rs  ddcci.rs  drm.rs  edid.rs  lib.rs  logind.rs
