[package]
name = "waybright"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "universal brightness control for wayland"
authors = ["Florian Nalu Adam"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ddc = "0.2.2"
ddc-i2c = { version = "0.2.2", features = ["with-linux"], default-features = false }
tokio = { version = "1.52.3", features = ["full"] }
wayland-client = "0.31.14"
wayland-protocols-wlr = "0.3.12"
