[package]
name = "waybright-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true

[[bin]]
name = "waybright"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
waybright-lib = { path = "../waybright-lib" }
wayland-client = "0.31.14"
