[package]
name = "waybright-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true

[[bin]]
name = "waybright"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
waybright-focus = { path = "../waybright-focus" }
waybright-lib = { path = "../waybright-lib" }
