[package]
name = "waybright-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
ddc = "0.2.2"
ddc-i2c = { version = "0.2.2", features = ["with-linux"], default-features = false }
zbus = { version = "5.16.0", features = ["blocking"] }
